# tree-of-thought-llm

./: pyproject.toml
src/tot/: models.py
src/tot/methods/: bfs.py
