[project]
name = "tree-of-thoughts-llm"
version = "0.1.0"
description = 'Official Implementation of "Tree of Thoughts: Deliberate Problem Solving with Large Language Models"'
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Shunyu Yao", email = "shunyuyao.cs@gmail.com" }]
license = { text = "MIT License" }
keywords = ["tree-search", "large-language-models", "llm", "prompting", "tree-of-thoughts"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry]
name = "tree-of-thought-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tot", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
sympy = "^1.13.1"
tqdm = "^4.66.4"
attrs = "^23.2.0"
backoff = "^2.2.1"
openai = "^1.36.0"
ollama = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
